--- a/css/main.css
+++ b/css/main.css
@@ -848,6 +848,11 @@ a {
     visibility: visible;
   }
 }
+@media (max-width: 576px) {
+  .logo.mobile img {
+    max-width: 54px;
+  }
+}
 .info-graph-product-list {
   display: none;
   -ms-grid-columns: (1fr)[2];
@@ -2257,42 +2262,34 @@ a {
 
 @-webkit-keyframes titleOut {
   0% {
-    position: absolute;
     opacity: 1;
-    -webkit-transform: translate(0, -50%);
-    transform: translate(0, -50%);
+  }
+  50% {
+    opacity: 0;
   }
   100% {
-    position: absolute;
-    -webkit-transform: translate(-100%, -50%);
-    transform: translate(-100%, -50%);
     opacity: 0;
   }
 }
 
 @keyframes titleOut {
   0% {
-    position: absolute;
     opacity: 1;
-    -webkit-transform: translate(0, -50%);
-    transform: translate(0, -50%);
+  }
+  50% {
+    opacity: 0;
   }
   100% {
-    position: absolute;
-    -webkit-transform: translate(-100%, -50%);
-    transform: translate(-100%, -50%);
     opacity: 0;
   }
 }
 @-webkit-keyframes titleTo {
   0% {
-    position: absolute;
     -webkit-transform: translate(-100%, -50%);
     transform: translate(-100%, -50%);
     opacity: 0;
   }
   100% {
-    position: absolute;
     opacity: 1;
     -webkit-transform: translate(0, -50%);
     transform: translate(0, -50%);
@@ -2300,13 +2297,11 @@ a {
 }
 @keyframes titleTo {
   0% {
-    position: absolute;
     -webkit-transform: translate(-100%, -50%);
     transform: translate(-100%, -50%);
     opacity: 0;
   }
   100% {
-    position: absolute;
     opacity: 1;
     -webkit-transform: translate(0, -50%);
     transform: translate(0, -50%);
@@ -2348,21 +2343,23 @@ a {
 }
 @-webkit-keyframes slideOut {
   0% {
-    left: 0;
     opacity: 1;
   }
+  50% {
+    opacity: 0;
+  }
   100% {
-    left: 100%;
     opacity: 0;
   }
 }
 @keyframes slideOut {
   0% {
-    left: 0;
     opacity: 1;
   }
+  50% {
+    opacity: 0;
+  }
   100% {
-    left: 100%;
     opacity: 0;
   }
 }
@@ -2569,18 +2566,24 @@ a {
 }
 @media (min-width: 1025px) {
   .hero__content:has(.info-graph-button.animate) .hero__info-container:not(.mobile) {
-    -webkit-animation: titleTo 1s ease-in forwards;
-    animation: titleTo 1s ease-in forwards;
+    opacity: 0;
+    -webkit-animation: titleTo 0.25s ease-in forwards;
+    animation: titleTo 0.25s ease-in forwards;
     pointer-events: all;
+    -webkit-animation-delay: 0.25s;
+    animation-delay: 0.25s;
   }
   .hero__content:has(.info-graph-button.animate) .hero__model-container:not(.mobile) {
-    -webkit-animation: titleOut 0.4s ease-in forwards;
-    animation: titleOut 0.4s ease-in forwards;
+    -webkit-animation: titleOut 0.5s ease-in forwards;
+    animation: titleOut 0.5s ease-in forwards;
     pointer-events: none;
   }
   .hero__content:has(.info-graph-button.animate) .tabs__panel.first .swiper-wrapper {
-    -webkit-animation: slideTo 1s ease-in forwards;
-    animation: slideTo 1s ease-in forwards;
+    opacity: 0;
+    -webkit-animation: slideTo 0.25s ease-in forwards;
+    animation: slideTo 0.25s ease-in forwards;
+    -webkit-animation-delay: 0.25s;
+    animation-delay: 0.25s;
   }
   .hero__content:has(.info-graph-button.animate) .tabs__panel.second .swiper-wrapper {
     -webkit-animation: slideOut 0.5s ease-in forwards;
@@ -2589,13 +2592,15 @@ a {
 }
 @media (min-width: 1025px) {
   .hero__content:has(.model-graph-button.animate) .hero__info-container:not(.mobile) {
-    -webkit-animation: titleOut 0.4s ease-in forwards;
-    animation: titleOut 0.4s ease-in forwards;
+    -webkit-animation: titleOut 0.5s ease-in forwards;
+    animation: titleOut 0.5s ease-in forwards;
   }
   .hero__content:has(.model-graph-button.animate) .hero__model-container:not(.mobile) {
     pointer-events: none;
-    -webkit-animation: titleTo 1s ease-in forwards;
-    animation: titleTo 1s ease-in forwards;
+    -webkit-animation: titleTo 0.25s ease-in forwards;
+    animation: titleTo 0.25s ease-in forwards;
+    -webkit-animation-delay: 0.25s;
+    animation-delay: 0.25s;
     pointer-events: all;
   }
   .hero__content:has(.model-graph-button.animate) .tabs__panel.first .swiper-wrapper {
@@ -2603,8 +2608,11 @@ a {
     animation: slideOut 0.5s ease-in forwards;
   }
   .hero__content:has(.model-graph-button.animate) .tabs__panel.second .swiper-wrapper {
-    -webkit-animation: slideTo 1s ease-in forwards;
-    animation: slideTo 1s ease-in forwards;
+    opacity: 0;
+    -webkit-animation: slideTo 0.25s ease-in forwards;
+    animation: slideTo 0.25s ease-in forwards;
+    -webkit-animation-delay: 0.25s;
+    animation-delay: 0.25s;
   }
 }
 .hero__info-middle {
@@ -2752,6 +2760,7 @@ a {
   }
 }
 .hero__info-container.mobile {
+  gap: 25px;
   display: none;
 }
 @media (max-width: 1024px) {
@@ -2778,6 +2787,12 @@ a {
 @media (max-width: 1024px) {
   .hero__info-container .hero__title {
     line-height: 104px;
+  }
+}
+@media (max-width: 576px) {
+  .hero__info-container .hero__title {
+    font-size: 50px;
+    line-height: 54px;
   }
 }
 @media (max-width: 1024px) {
@@ -2836,12 +2851,18 @@ a {
 }
 .hero__model-container.mobile {
   display: none;
+  gap: 25px;
 }
 @media (max-width: 1024px) {
   .hero__model-container.mobile {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+}
+@media (max-width: 576px) {
+  .hero__model-container.mobile {
+    opacity: 1;
   }
 }
 .hero__model-container .hero__title {
@@ -2854,6 +2875,11 @@ a {
 @media (max-width: 1024px) {
   .hero__model-container .hero__title span {
     margin-left: 10px;
+  }
+}
+@media (max-width: 576px) {
+  .hero__model-container .hero__title span {
+    margin-left: 5px;
   }
 }
 @media (max-width: 1440px) {
@@ -2872,6 +2898,12 @@ a {
   .hero__model-container .hero__title {
     font-size: 104px;
     line-height: 104px;
+  }
+}
+@media (max-width: 576px) {
+  .hero__model-container .hero__title {
+    font-size: 50px;
+    line-height: 50px;
   }
 }
 @media (max-width: 1024px) {
@@ -3061,6 +3093,11 @@ a {
     padding-left: 30px;
   }
 }
+@media (max-width: 576px) {
+  .hero__tabs {
+    padding-left: 20px;
+  }
+}
 .hero .tabs__panels {
   position: absolute;
   top: 60px;
@@ -3075,6 +3112,17 @@ a {
     position: static;
     height: 100%;
     display: block;
+  }
+}
+@media (max-width: 576px) {
+  .hero .tabs__panels {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 .hero .tabs__content {
@@ -3096,6 +3144,14 @@ a {
   .hero .tabs__content .tabs__panel {
     position: relative;
     display: none !important;
+  }
+}
+@media (max-width: 576px) {
+  .hero .tabs__content .tabs__panel {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    opacity: 1;
   }
 }
 .hero .tabs__content .tabs__panel--active {
@@ -3337,3 +3393,4 @@ a {
     height: 18px;
   }
 }
+/*# sourceMappingURL=main.css.map */
