--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -254,6 +255,21 @@ a {
     pointer-events: none;
   }
 }
+.tabs__nav-item:first-child a {
+  color: #fff;
+}
+.tabs__nav-item > a {
+  display: none;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  color: #737373;
+}
+@media (max-width: 1024px) {
+  .tabs__nav-item > a {
+    display: block;
+  }
+}
 .tabs__panel--active {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -282,6 +298,7 @@ a {
 }
 @media (max-width: 1024px) {
   .tabs__nav-btn {
+    display: none;
     font-size: 16px;
   }
 }
@@ -544,12 +561,18 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   overflow: hidden; /* Обрезаем изображение, если выходит за границы */
+  pointer-events: none;
 }
 .swiper-slide a img {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
   object-fit: contain; /* Вписывает целиком без обрезки */
+}
+@media (max-width: 1024px) {
+  .swiper-slide a {
+    pointer-events: all;
+  }
 }
 @media (max-width: 1440px) {
   .swiper-slide {
@@ -659,13 +682,6 @@ a {
   transform: rotate(180deg);
 }
 
-/* .swiper-scrollbar {
-  background: rgba(0, 0, 0, 0.1);
-  background-color: #404040;
-  height: 2px;
-  width: 100%;
-  position: relative;
-} */
 .swiper-pagination-progressbar {
   background: rgba(0, 0, 0, 0.1);
   background-color: #404040;
@@ -701,6 +717,7 @@ a {
   .swiper-scrollbar-container {
     overflow: unset;
     margin-right: unset;
+    top: 0;
   }
 }
 
@@ -928,7 +945,13 @@ a {
 }
 
 .fancybox__container:not(.is-compact) .fancybox__slide.has-close-btn {
-  padding-top: 0;
+  padding: 36px 30px;
+}
+
+.fancybox__container:not(.is-compact) .fancybox__slide:has(.telegram-popup),
+.fancybox__container:not(.is-compact) .fancybox__slide:has(.policy-popup),
+.fancybox__container:not(.is-compact) .fancybox__slide:has(.offer-popup) {
+  padding: 0;
 }
 
 .popup-title {
@@ -2207,8 +2230,8 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
   }
 }
 
@@ -2450,6 +2473,13 @@ a {
 
 .margin-0 {
   margin: 0 !important;
+}
+
+.fancybox__content:has(.fancybox-image) .is-close-btn {
+  width: 20px;
+  height: 20px;
+  top: 30px !important;
+  right: 30px !important;
 }
 
 .header {
@@ -2912,12 +2942,8 @@ a {
     display: -ms-flexbox;
     display: flex;
     gap: 40px;
-  }
-}
-@media (max-width: 576px) {
-  .hero__model-container.mobile {
     opacity: 1;
-    gap: 25px;
+    pointer-events: all;
   }
 }
 .hero__model-container .hero__title {
@@ -3167,11 +3193,6 @@ a {
   .hero .tabs__panels {
     position: static;
     height: 100%;
-    display: block;
-  }
-}
-@media (max-width: 576px) {
-  .hero .tabs__panels {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -3179,6 +3200,7 @@ a {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    gap: 100px;
   }
 }
 .hero .tabs__content {
@@ -3198,12 +3220,8 @@ a {
 }
 @media (max-width: 1024px) {
   .hero .tabs__content .tabs__panel {
+    pointer-events: all;
     position: relative;
-    display: none !important;
-  }
-}
-@media (max-width: 576px) {
-  .hero .tabs__content .tabs__panel {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: flex !important;
@@ -3316,7 +3334,7 @@ a {
 .footer.mobile {
   margin-top: 60px;
   display: none;
-  padding: 30px 0 158px 0;
+  padding: 30px 0 30px 0;
   margin: 100px 30px 0 30px;
 }
 @media (max-width: 1024px) {
