--- a/css/main.css
+++ b/css/main.css
@@ -270,6 +270,18 @@ a {
     display: block;
   }
 }
+.tabs__nav-item .reset-swiper {
+  display: none;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  color: #fff;
+}
+@media (max-width: 1024px) {
+  .tabs__nav-item .reset-swiper {
+    display: block;
+  }
+}
 .tabs__panel--active {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -886,6 +898,9 @@ a {
 .info-graph-product-item {
   background: #414141;
   aspect-ratio: 3/4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .info-graph-more .more-close {
@@ -1368,8 +1383,12 @@ a {
   .fancybox__content > .f-button.is-close-btn {
     right: 30px;
     top: 30px;
-    width: 24px;
-    height: 24px;
+    width: 20px !important;
+    height: 20px !important;
+  }
+  .fancybox__content > .f-button.is-close-btn svg {
+    width: 100%;
+    height: 100%;
   }
 }
 @media (max-width: 576px) {
@@ -2482,6 +2501,23 @@ a {
   right: 30px !important;
 }
 
+.fancybox__toolbar {
+  position: absolute;
+  top: 30px !important;
+  right: 30px !important;
+}
+.fancybox__toolbar button:not(:last-child) {
+  display: none;
+}
+.fancybox__toolbar button {
+  background: transparent;
+  width: 20px;
+  height: 20px;
+}
+.fancybox__toolbar button:hover {
+  background: transparent;
+}
+
 .header {
   padding-top: 30px;
   /*  margin-bottom: clamp(0.938rem, -14.986rem + 35.26vh, 7.813rem); */
@@ -3226,6 +3262,12 @@ a {
     display: -ms-flexbox !important;
     display: flex !important;
     opacity: 1;
+  }
+}
+@media (max-width: 1024px) {
+  .hero .tabs__content .tabs__panel.second {
+    padding-top: 100px;
+    margin-top: -100px;
   }
 }
 .hero .tabs__content .tabs__panel--active {
