--- a/css/main.css
+++ b/css/main.css
@@ -1381,6 +1381,7 @@ a {
 }
 @media (max-width: 1024px) {
   .fancybox__content > .f-button.is-close-btn {
+    display: none;
     right: 30px;
     top: 30px;
     width: 20px !important;
@@ -1951,7 +1952,8 @@ a {
 }
 
 .fancybox__slide.has-image {
-  padding: 30px;
+  padding: 0;
+  background-color: #101010;
 }
 
 .info-graph-projects-swiper {
@@ -2502,9 +2504,11 @@ a {
 }
 
 .fancybox__toolbar {
+  opacity: 1 !important;
   position: absolute;
   top: 30px !important;
   right: 30px !important;
+  display: none;
 }
 .fancybox__toolbar button:not(:last-child) {
   display: none;
@@ -2513,6 +2517,10 @@ a {
   background: transparent;
   width: 20px;
   height: 20px;
+}
+.fancybox__toolbar button svg {
+  width: 100%;
+  height: 100%;
 }
 .fancybox__toolbar button:hover {
   background: transparent;
@@ -3509,3 +3517,4 @@ a {
     height: 18px;
   }
 }
+/*# sourceMappingURL=main.css.map */
