--- a/css/main.css
+++ b/css/main.css
@@ -1372,7 +1372,59 @@ a {
   }
 }
 
-.fancybox__content > .f-button.is-close-btn {
+.fancybox-button.fancybox-close-small {
+  display: none;
+  padding: 0;
+  opacity: 1 !important;
+  color: #fff;
+  background: transparent;
+}
+.fancybox-button.fancybox-close-small svg path {
+  width: 20px;
+  height: 20px;
+}
+@media (max-width: 1024px) {
+  .fancybox-button.fancybox-close-small {
+    display: none;
+    right: 30px;
+    top: 30px;
+  }
+  .fancybox-button.fancybox-close-small svg {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 576px) {
+  .fancybox-button.fancybox-close-small {
+    right: 20px;
+    top: 20px;
+  }
+}
+
+/* .fancybox__content > .f-button.is-close-btn {
+  width: 20px;
+  height: 20px;
+  opacity: 1 !important;
+  color: #fff;
+  background: transparent;
+  @include tablet {
+    display: none;
+    right: 30px;
+    top: 30px;
+    width: 20px !important;
+    height: 20px !important;
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  @include mobile {
+    right: 20px;
+    top: 20px;
+  }
+} */
+.is-close-btn {
+  position: absolute;
   width: 20px;
   height: 20px;
   opacity: 1 !important;
@@ -1380,20 +1432,20 @@ a {
   background: transparent;
 }
 @media (max-width: 1024px) {
-  .fancybox__content > .f-button.is-close-btn {
+  .is-close-btn {
     display: none;
     right: 30px;
     top: 30px;
     width: 20px !important;
     height: 20px !important;
   }
-  .fancybox__content > .f-button.is-close-btn svg {
+  .is-close-btn svg {
     width: 100%;
     height: 100%;
   }
 }
 @media (max-width: 576px) {
-  .fancybox__content > .f-button.is-close-btn {
+  .is-close-btn {
     right: 20px;
     top: 20px;
   }
@@ -2534,6 +2586,10 @@ a {
   object-fit: contain !important;
   transform: none !important;
 } */
+.fancybox-slide {
+  padding: 0;
+}
+
 .fancybox-container:has(.fancybox-image) {
   padding: 0;
   background-color: #101010;
@@ -2541,6 +2597,22 @@ a {
 
 .fancybox-slide--image {
   padding: 36px 30px;
+}
+
+/* .my-close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: transparent;
+  color: #fff;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 9999;
+} */
+.is-close-btn {
+  padding: 0;
+  border: none;
 }
 
 .header {
